More changes due to the as.data.frame-change.

--- a/tutorials/inla/inla/newStart/master.tex
+++ b/tutorials/inla/inla/newStart/master.tex
@@ -13,7 +13,7 @@
 \usepackage{amsthm}                   % for  lage teoremer og lignende.
 \usepackage{graphicx}                 % inkludering av grafikk
 \usepackage{color}
-\usepackage{subfig}                   % hvis du vil kunne ha flere figurer inni en figur
+\usepackage{subfigure} 
 \usepackage{listings}                 % Fin for inkludering av kildekode
 \usepackage{hyperref}                   % Lager hyperlinker i evt. pdf-dokument, men har noen bugs, den er kommentert bort her.
 \usepackage{natbib}
@@ -98,7 +98,7 @@
 \def\Prec{\text{Prec}}
 \def\Trace{\text{Trace}}
 
-
+\def\maxwidth{\linewidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% Begin document %%%%%
