--- a/tutorials/inla/inla/newStart/outputProcessing.Rnw
+++ b/tutorials/inla/inla/newStart/outputProcessing.Rnw
@@ -2,7 +2,6 @@
 <<echo=FALSE>>=
 rm(list=ls())
 library(INLA)
-INLA:::inla.my.update()
 @ 
 
 
@@ -18,15 +17,17 @@ which implements this model
 \end{displaymath}
 where $u$ is a Gaussian random effect, using simulated data.
 <<>>=
-nre = 10
-m = 10
+nre = 5
+m = 3
 n = nre * m
 x = rnorm(n)
 re = rnorm(nre)
 idx = rep(1:nre, each = m)
 eta = 1 + x + re[idx]
 y = eta + rnorm(n, sd = 0.1)
-result = inla(y ~ 1 + x + f(idx, model="iid"),  data = data.frame(y, x, idx))
+formula = y ~ 1 + x + f(idx, model="iid")
+my.data = data.frame(y, x, idx)
+result = inla(formula,  data = my.data)
 @ 
 This model has two fixed effects ($\mu$ and $\beta$), 
 one random effect (component) $u$, and two hyperparameters: the
@@ -73,17 +74,44 @@ To get a visual presentation of the results, we can use the
 <<eval=FALSE>>=
 plot(result)
 @ 
+Non-standard options to the \verb|plot|-command, includes (see
+\verb|?plot.inla| for the full list)
+\begin{description}
+\item[single$=$FALSE] Produce more than one figure for each page
+    (FALSE) or one figure for each page (TRUE)
+\item[pdf$=$FALSE] If TRUE, only produce pdf-files of each plot and return
+    the list of files produced.  
+\item[postscript$=$FALSE] If TRUE, only produce postscript-files of
+    each plot and return the list of files produced.
+\end{description}
+For options \verb|pdf| and \verb|postscript|, the files are stored in
+the location indicated by option \verb|prefix|, where
+\verb|prefix="inla.plots/figure-"| is the default.  Numbering of the
+plots are added to \verb|prefix|.
+
+If the use of \verb|plot| is required from within
+\verb|knitr|-document, like here, we need to do similar to this for the moment
 <<results='asis', echo=FALSE>>=
 figs = plot(result, pdf=TRUE, single=TRUE)
-cat("\\begin{figure}[h]\n\\label{output:fig1}\n")
-for(fig in figs) {
-    cat("\t\\subfigure[]{\\rotatebox{0}{\\includegraphics[height=0.45\\linewidth]{", 
-        fig, "}}}\n", sep="")
-}
+cat("\\begin{figure}[htb]\n\\label{output:fig1}\n")
+for(fig in figs) 
+    cat("\t\\subfigure[]{\\includegraphics[height=0.45\\linewidth]{", 
+        fig, "}}\n", sep="")
+cat("\t\\caption{The results from the inla-call}\n")
+cat("\\end{figure}\n")
+@ 
+<<echo=TRUE, eval=FALSE>>=
+figs = plot(result, pdf=TRUE, single=TRUE)
+cat("\\begin{figure}[htb]\n\\label{output:fig1}\n")
+for(fig in figs) 
+    cat("\t\\subfigure[]{\\includegraphics[height=0.45\\linewidth]{", 
+        fig, "}}\n", sep="")
+cat("\t\\caption{The results from the inla-call}\n")
 cat("\\end{figure}\n")
 @ 
 %%
-which produce the plots in~\Fig{output:fig1}. Figures~(a) and (b)
+using \verb|results='asis',echo=FALSE| options for this chunk.  This
+will produce all the plots in~\Fig{output:fig1}.  Figures~(a) and (b)
 shows the posterior marginal of the two fixed effects. Figure~(c)
 shows the posterior mean/median/quantiles of the random effect $u$
 plotted against its index. Figures~(d) and (e) shows the posterior
@@ -94,8 +122,8 @@ response and the random effect.
 
 Summaries for the posteriors for the fixed and random effects, and the
 hyperparameters, are available directly from the inla-object. For the
-fixed effects, the statistics are stored as a data.frame
-with one row for each variable and each statistics in each column
+fixed effects, the statistics are stored as data.frames
+with one row for each variable and each statistics in each column.
 <<>>=
 str(result$summary.fixed)
 result$summary.fixed
@@ -118,34 +146,271 @@ result$summary.hyperpar
 
 \section{Posteriors Marginals}
 
-internal storage, plotting and spline-interpolation. 
+The \verb|INLA|-approach to Bayesian approximate inference, computes
+posterior marginals for each variable in the model. In this section we
+will see how these posterior marginals are stored and represented
+in the output from the \verb|inla()|-call. 
 
-\subsection{Transforming posterior marginal distributions}
-Write about
-<<eval=FALSE>>=
-inla.tmarginal
-@
+There are several sections of posterior marginals, 
+<<>>=
+names(result)[grep("marginals.", names(result))]
+@ 
+%%
+and they are all treated the same way. To simplify the discussion, we
+will look at the posterior marginal for the effect of \verb|x| in the
+regression model. We can extract this posterior marginal by accessing
+the entry in the list with this name
+<<>>=
+length(result$marginals.fixed)
+names(result$marginals.fixed)
+@ 
+and then
+<<>>=
+pm = result$marginals.fixed$x
+str(pm)
+@ 
+The posterior marginal is stored in a matrix with ``x''-values and
+``y''-values. Their meaning should be obvious if we plot ``x'' against ``y''
+\begin{center} 
+<<out.height='8cm',out.width='8cm'>>=
+plot(pm[,"x"], pm[,"y"])
+@ 
+\end{center}
+so the ``x''s are the abscissa values and the ``y''s are the values
+for the posterior marginal.  The abscissa values are chosen
+``intelligently'' as will be clear later. The current number of points
+used to represent each posterior marginal is $\Sexpr{dim(pm)[1]}$, but
+this might change. 
+
+In order to produce nice-looking posterior marginals, we will draw it
+with lines instead of points, like
+\begin{center} 
+<<out.height='8cm',out.width='8cm'>>=
+plot(pm[,"x"], pm[,"y"])
+lines(pm[,"x"], pm[,"y"])
+@ 
+\end{center}
+but this produces not very visually pleasing plots. The way out is to
+interpolate in log-scale instead, like
+\begin{center} 
+<<out.height='8cm',out.width='8cm'>>=
+plot(inla.smarginal(pm), type="l")
+@ 
+\end{center}
+Here we use the function \verb|inla.smarginal| which ``spline'' a
+marginal distribution by doing spline interpolation in log-scale.
+
+Note the the summary-statistics above, were derived from the
+corresponding posterior marginals.
 
 \subsection{Deriving posterior quantitites}
-Write about
-<<eval=FALSE>>=
-inla.dmarginal
-inla.pmarginal
-inla.emarginal
-inla.qmarginal
-inla.mmarginal
-inla.zmarginal
-inla.hpdmarginal
-inla.rmarginal
-@
+
+All standard operations can be excecuted on a marginal, like computing
+the density at some locations
+<<>>=
+inla.dmarginal(c(0.98, 1.0, 1.02), pm)
+@ 
+and often better done i log-scale
+<<>>=
+inla.dmarginal(c(0.98, 1.0, 1.02), pm, log=TRUE)
+@ 
+Computing percentiles
+<<>>=
+perc = inla.pmarginal(c(0.98, 1.0, 1.02), pm)
+perc
+@ 
+and quantiles
+<<>>=
+inla.qmarginal(perc, pm)
+@ 
+and producing random samples
+<<>>=
+x = inla.rmarginal(1000, pm)
+print(c(mean(x), sd(x)))
+@ 
+and $z$ummary-statistics
+<<>>=
+inla.zmarginal(pm)
+@ 
+and computing expected values with respect to the marginal
+<<>>=
+inla.emarginal(function(x) return(x), pm)
+@ 
+or a vector version
+<<>>=
+mom = inla.emarginal(function(x) return(c(x, x^2)), pm)
+print(c(mean = mom[1], sd = sqrt(max(0, mom[2] - mom[1]^2))))
+@ 
+and a  $95\%$-HPD-interval can be computed with
+<<>>=
+inla.hpdmarginal(0.95, pm)
+@ 
+
+An annoying task is to transforming posterior marginal, like we know
+the posterior for $x$ but we want the posterior for $\exp(x)$. To do
+this change-of-variable excersize, we can use the
+\verb|inla.tmarginal|-function
+\begin{center}
+<<out.width='8cm', out.height='8cm'>>=
+t.pm = inla.tmarginal(function(x) return(exp(x)), pm)
+plot(inla.smarginal(pm),  type="l")
+@ 
+\end{center}
+as long as the continous function is monoton increasing or
+decreasing. The transformed density \verb|t.sm| is just another
+density, hence we can do 
+<<>>=
+inla.zmarginal(t.pm)
+@ 
+and so on. 
+
+
+As a final check, we can compute the percentiles of the abscissa values
+<<>>=
+round(inla.pmarginal(pm[,"x"], pm), 4)
+@ 
+%%
+and they ``almost'' correspond to intuitive numbers. The reason
+these numbers are not exact, is the down-sampling into
+\Sexpr{dim(pm)[1]} abscissa/values pairs, which is then
+interpolated. This resolution could of course be increased with the
+expence of more use of memory and file-storage.
 
 \subsection{Sampling from the joint posterior}
-Write about
-<<eval=FALSE>>=
-inla.hyperpar.sample
-inla.posterior.sample
-@
 
-\section{Simultaneous credible bands}
+Although posterior marginals is often the target for inference, we
+sometimes want to compute the posterior or the expected value of
+either some function of the hyperparameters $\mm{\theta}$, or some
+function of the hyperparameters $\mm{\theta}$ and the latent field
+$\mm{x}$. To do this, we can use iid samples from the posterior,
+either using \verb|inla.hyperpar.sample| which generate samples from
+$\mm{\theta}|\mm{y}$, or \verb|inla.posterior.sample| which generate
+samples from $(\mm{x}, \mm{\theta})|\mm{y}$.  Of course, these samples
+are not truly generated from the posterior, but using good
+approximations which allows for fast sampling.\footnote{Deterministic
+    inference is doable for these tasks, but very hard to do and
+    implement in practice...}
 
-How to do this?
+To sample from $\mm{\theta}|\mm{y}$ we use
+<<>>=
+theta.sample = inla.hyperpar.sample(10^4, result)
+head(str(theta.sample))
+@ 
+%%
+and get a matrix where each row is one sample, and the column-names
+gives the interpretation of the hyperparameters. Note that ``in
+user-scale'' is added to the names to indicate that the values are in
+``user-scale'', ie precisions, correlation, and so on, and not
+log-precision and transformed correlation, etc.  We can compare these
+samples with the marginals found already, using
+\begin{center} 
+<<out.height='8cm',out.width='8cm'>>=
+hist(theta.sample[, 1], prob = TRUE, n = 100, 
+     main = colnames(theta.sample)[1])
+lines(inla.smarginal(result$marginals.hyperpar[[1]]), lwd=2)
+@ 
+\end{center}
+and
+\begin{center} 
+<<out.height='8cm',out.width='8cm'>>=
+hist(theta.sample[, 2], prob = TRUE, n = 100, 
+     main = colnames(theta.sample)[2])
+lines(inla.smarginal(result$marginals.hyperpar[[2]]), lwd=2)
+@ 
+\end{center}
+For more information which approximation that is behind this function,
+see \citet{art522}.
+
+
+
+\verb|inla.posterior.sample| can be used to generate samples from
+$(\mm{x}, \mm{\theta})|\mm{y}$ using the \emph{integration points} for
+$\mm{\theta}$ only. Again, refer to \citet{art522} for details. 
+
+In order to use this function, then the inla-call must have set option
+\verb|config=TRUE| in control \verb|control.compute|. So we need to
+recompute \verb|result| with this option set
+<<>>=
+siz.before = object.size(result)
+result = inla(formula,  data = my.data, 
+    control.compute = list(config = TRUE))
+siz.after = object.size(result)
+ratio = siz.after/siz.before
+print(ratio)
+@ 
+%%
+and we see that the result-object has increased its size.  The reason
+is that intermediate results need to be stored in the
+result-object. 
+
+We can now generate joint samples using
+<<>>=
+samples = inla.posterior.sample(1000, result)
+@ 
+%%
+The structure of \verb|samples| is a bit more complicated in this
+case. It is a list of length $\Sexpr{length(samples)}$, one for each sample,
+<<>>=
+length(samples)
+@ 
+%%
+and each element consists of sublists
+<<>>=
+names(samples[[1]])
+@ 
+%%
+Here, 
+<<>>=
+samples[[1]]$hyperpar
+@ 
+%%
+are the sampled values of the hyperparameters, 
+<<>>=
+samples[[1]]$logdens
+@ 
+%%
+are the posterior densities with contribution from the
+hyperparameters, the latent field and their sum (the
+joint). \verb|samples[[1]]$latent| is a matrix with the sampled values of
+the latent field, named by \verb|<name>|\verb|<index.number>|, like
+<<>>=
+rownames(samples[[1]]$latent)
+@ 
+%%
+From these names we can extract what we require from each sample.
+
+Note that only the integration points are used for the
+hyperparameters, which we can see from a plot
+\begin{center} 
+<<out.width='8cm',out.height='8cm'>>=
+xy.mat = matrix(NA, nrow = length(samples), ncol = length(samples[[1]]$hyperpar))
+for(i in 1:length(samples))
+    xy.mat[i, ] = samples[[i]]$hyperpar
+plot(xy.mat[, 1], xy.mat[, 2], 
+     xlab = names(samples[[1]]$hyperpar)[1], 
+     ylab = names(samples[[1]]$hyperpar)[2])
+@ 
+%%
+If we need a better resolution in the $\mm{\theta}$-space, we have to
+change the integration-scheme, to, for example,
+\begin{center} 
+<<out.width='8cm',out.height='8cm'>>=
+result = inla(formula,  data = my.data, 
+    control.compute = list(config = TRUE),
+    control.inla = list(
+        int.strategy = "grid", 
+        dz = 0.5, 
+        diff.logdens = 10))
+samples = inla.posterior.sample(1000, result)
+xy.mat = matrix(NA, nrow = length(samples), ncol = length(samples[[1]]$hyperpar))
+for(i in 1:length(samples))
+    xy.mat[i, ] = samples[[i]]$hyperpar
+plot(xy.mat[, 1], xy.mat[, 2], 
+     xlab = names(samples[[1]]$hyperpar)[1], 
+     ylab = names(samples[[1]]$hyperpar)[2])
+@ 
+\end{center}
+which gives a higher resolution of in the $\mm{\theta}$-space.
+
+\end{center}
+
