started working^Cn model specification section for tutorial

--- a/tutorials/inla/inla/newStart/master.tex
+++ b/tutorials/inla/inla/newStart/master.tex
@@ -19,6 +19,7 @@
 \usepackage{natbib}
 \usepackage{my-showkeys}
 \usepackage{alltt}
+\usepackage{bm}
 \usepackage{amsthm} 
 \hypersetup{colorlinks,
     citecolor=black,
