--- a/tutorials/inla/inla/newStart/modelSpec.Rnw
+++ b/tutorials/inla/inla/newStart/modelSpec.Rnw
@@ -3,6 +3,35 @@
 library(INLA)
 @ 
 
+The first thing to do for running \tv{R-INLA} is to specify the model of 
+interest in the right way. We start the model specification by looking at 
+the linear predictor $\bm{\eta}$. For 
+example, assume we have a generic model 
+$y_i \stackrel{\text{iid}}{\sim} p(y_i \mid \lambda_i)$, where
+the link function $h(\cdot)$ is used to link the mean $\lambda$ to 
+the linear predictor:
+\begin{equation}\label{eq:exampleLinPred}
+	\eta_i = g(\lambda_i) = \beta_0 + \beta_1 x_{1i} + \beta_2 x_{2i} + f(z_i)
+\end{equation}
+Here, $\bm{\beta} = (\beta_0, \beta_1, \beta_2)$ are ``fixed'' effects
+where $\beta_0$ is the intercept and $\beta_1$ and $\beta_2$ describe a
+linear effect of the observed covariates $\bm{x}_1$ and $\bm{x}_2$.
+The term $f(z_i)$ specifies a non-linear/smooth effect of the covariate $\bm{z}$.
+The specification on the level of the linear predictor is regarded as 
+the latent structure and striclty speaking this structure has
+to be Gaussian. Within \tv{R-INLA} a structure, such as the one
+provided in \eqref{eq:exampleLinPred} is specified through a $\tt{formula}$
+object:
+<<eval=FALSE>>=
+  formula = y ~ x1 + x2 + f(z, model= ...)
+@ 
+A formula object is thereby composed of two different types of terms,
+fixed effects just added to the model without additional specification
+and random effects specified using the ${\tt f(.)}$ function. Here,
+additional arguments to describe the underlying latent model are available.
+Both terms will be described in more detail in the following section.
+
+
 \section{Define the latent structure}
 
 \subsection{Fixed effects}
