More work on the tutorial

--- a/tutorials/inla/inla/newStart/master.tex
+++ b/tutorials/inla/inla/newStart/master.tex
@@ -21,11 +21,14 @@
 \usepackage{alltt}
 \usepackage{bm}
 \usepackage{amsthm} 
+\usepackage{block}
 \hypersetup{colorlinks,
     citecolor=black,
     filecolor=black,
     linkcolor=black,
     urlcolor=black}
+
+
 \setcounter{secnumdepth}{1} % \section nummereres ikke
 
 
