Added some cross-references in the doc for the pc-priors and functions, as suggested by CtB

--- a/r-inla.org/doc/prior/pc.rho0.tex
+++ b/r-inla.org/doc/prior/pc.rho0.tex
@@ -40,7 +40,7 @@ This prior for the hyperparameters is specified inside the
 \subsection*{Example}
 
 \subsection*{Notes}
-
+See also functions \texttt{inla.pc.\{d,p,q,r\}rho0}
 \end{document}
 
 
