--- a/r-inla.org/doc/hyper/link/sslogit.tex
+++ b/r-inla.org/doc/hyper/link/sslogit.tex
@@ -26,5 +26,5 @@
 	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 \end{description}
-	\item[pdf] ss
+	\item[pdf] NA
 \end{description}
