--- a/r-inla.org/doc/prior/pc.prec.tex
+++ b/r-inla.org/doc/prior/pc.prec.tex
@@ -36,6 +36,7 @@ This prior for the hyperparameters is specified inside the
 
 \subsection*{Notes}
 
+See also functions \texttt{inla.pc.\{d,p,q,r\}prec}
 
 \end{document}
 
