--- a/r-inla.org/doc/prior/pc.rho1.tex
+++ b/r-inla.org/doc/prior/pc.rho1.tex
@@ -50,6 +50,7 @@ This prior for the hyperparameters is specified inside the
 
 \subsection*{Notes}
 
+See also functions \texttt{inla.pc.\{d,p,q,r\}rho1}
 
 \end{document}
 
