Fixed a missprint. Thanks to CtB.

--- a/r-inla.org/doc/latent/generic3.tex
+++ b/r-inla.org/doc/latent/generic3.tex
@@ -15,7 +15,7 @@ The generic3 model implements the following precision matrix
     \mathbf{Q}= \tau_{\text{common}} \sum_{i=1}^{m} \tau_i \mm{R}_i,
     \qquad 1 < m \le 10,
 \end{equation}
-where each $\mm{R}_i \ge 0$, and $\tau_i$ is the spesific precision
+where each $\mm{R}_i \ge 0$, and $\tau_i$ is the specific precision
 parameter and $\tau_{\text{common}}$ is a shared one.
 
 \subsection*{Hyperparameters}
