--- a/r-inla.org/doc/hyper/latent/generic3.tex
+++ b/r-inla.org/doc/hyper/latent/generic3.tex
@@ -133,5 +133,6 @@
 	\item[n.div.by] 
 	\item[n.required] TRUE
 	\item[set.default.values] TRUE
+	\item[status] experimental
 	\item[pdf] generic3
 \end{description}
