--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -136,16 +136,16 @@ if true; then
     ## setup the new R-repo...
     d=$wwwR/src/contrib
     cp -v $SRC $d/INLA_$VERSION.tar.gz
-    for d in $(find $wwwR/bin/macosx -name updateBinaryPackages); do
+    for d in $(find $wwwR/bin/macosx -name updateBinaryPackages|xargs dirname); do
 	cp -v $tgzINLA $d/INLA_$VERSION.tgz
     done
-    for d in $(find $wwwR/bin/windows -name updateBinaryPackages); do
+    for d in $(find $wwwR/bin/windows -name updateBinaryPackages|xargs dirname); do
 	cp -v $zipINLA $d/INLA_$VERSION.zip
     done
-    for f in $(find $wwwR -name updateBinaryPackages); do
+    for d in $(find $wwwR -name updateBinaryPackages|xargs dirname); do
 	(
-	    echo "RUN $f..."
-	    cd $(dirname $f)
+	    echo "RUN $d/updateBinaryPackages..."
+	    cd $d
 	    ./updateBinaryPackages
 	)
     done
