--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -128,26 +128,22 @@ if [ $# -ge 1 -a "$1" == "1" ]; then
     
     echo $bdate >  $www/build.date
     echo $bdate >  $www/testing/build.date
-fi
 
-##if [ $# -ge 1 -a "$1" == "1" ]; then
-if true; then
-    ## not TESTING...?
-    ## setup the new R-repo...
-    d=$wwwR/src/contrib
-    cp -v $SRC $d/INLA_$VERSION.tar.gz
-    for d in $(find $wwwR/bin/macosx -name updateBinaryPackages|xargs dirname); do
-	cp -v $tgzINLA $d/INLA_$VERSION.tgz
-    done
-    for d in $(find $wwwR/bin/windows -name updateBinaryPackages|xargs dirname); do
-	cp -v $zipINLA $d/INLA_$VERSION.zip
-    done
-    for d in $(find $wwwR -name updateBinaryPackages|xargs dirname); do
-	(
-	    echo "RUN $d/updateBinaryPackages..."
-	    cd $d
-	    ./updateBinaryPackages
-	)
+    for prefix in stable testing; do
+	cp -v $SRC $wwwR/$prefix/src/contrib/INLA_$VERSION.tar.gz
+	for d in $(find $wwwR/$prefix/bin/macosx -name updateBinaryPackages|xargs dirname); do
+	    cp -v $tgzINLA $d/INLA_$VERSION.tgz
+	done
+	for d in $(find $wwwR/$prefix/bin/windows -name updateBinaryPackages|xargs dirname); do
+	    cp -v $zipINLA $d/INLA_$VERSION.zip
+	done
+	for d in $(find $wwwR/$prefix -name updateBinaryPackages|xargs dirname); do
+	    (
+		echo "RUN $d/updateBinaryPackages..."
+		cd $d
+		./updateBinaryPackages
+	    )
+	done
     done
 fi
 
@@ -158,6 +154,24 @@ if [ $# -ge 1 -a "$1" == "2" ]; then
     cp -v $zipINLA $www/testing/INLA.zip
     cp -v $SRC     $www/testing/INLA-source.tgz
     echo $bdate >  $www/testing/build.date
+
+    for prefix in testing; do
+	cp -v $SRC $wwwR/$prefix/src/contrib/INLA_$VERSION.tar.gz
+	for d in $(find $wwwR/$prefix/bin/macosx -name updateBinaryPackages|xargs dirname); do
+	    cp -v $tgzINLA $d/INLA_$VERSION.tgz
+	done
+	for d in $(find $wwwR/$prefix/bin/windows -name updateBinaryPackages|xargs dirname); do
+	    cp -v $zipINLA $d/INLA_$VERSION.zip
+	done
+	for d in $(find $wwwR/$prefix -name updateBinaryPackages|xargs dirname); do
+	    (
+		echo "RUN $d/updateBinaryPackages..."
+		cd $d
+		./updateBinaryPackages
+	    )
+	done
+    done
+
 fi
 
 {
