--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -57,7 +57,7 @@ cat $D/version.R | \
          /^[ \t]*inla[.]hgid *=/{  print "    inla.hgid  = ", "inla.trim(\"" inlahg "\")"; next;}
          /^[ \t]*date *=/{       print "    date       = ", "inla.trim(\"" date    "\")"; next;}
          /^[ \t]*bdate *=/{      print "    bdate      = ", "inla.trim(\"" bdate   "\")"; next;}
-         /^[ \t]*version *=/{      print "    version      = ", "inla.trim(\"" version   "\")"; next;}
+        /^[ \t]*version *=/{      print "    version      = ", "inla.trim(\"" version   "\")"; next;}
 	 {print}' hg="$hg" inlahg="$inlahg" bdate="$bdate" date="$date" version="$VERSION" > $tt
 cp $tt $D/version.R
 mv -f $tt $DD/version.R
@@ -117,6 +117,16 @@ wwwR=../www/R
 OldDir=$(echo ~hrue/www/www.inla/binaries/testing/Old)
 old="$tgzINLA-$bdate"
 
+convert_to_mac_binary () {
+    host=hruemac.math.ntnu.no
+    for f in "$@"; do
+	ff=$(basename $f)
+	scp $f $host:$ff
+	ssh $host R CMD INSTALL --build $ff
+	scp $host:$ff $f
+    done
+}
+
 if [ $# -ge 1 -a "$1" == "1" ]; then
     cp -v $tgzINLA $www/INLA.tgz
     cp -v $zipINLA $www/INLA.zip
@@ -133,6 +143,7 @@ if [ $# -ge 1 -a "$1" == "1" ]; then
 	cp -v $SRC $wwwR/$prefix/src/contrib/INLA_$VERSION.tar.gz
 	for d in $(find $wwwR/$prefix/bin/macosx -name updateBinaryPackages|xargs dirname); do
 	    cp -v $tgzINLA $d/INLA_$VERSION.tgz
+	    convert_to_mac_binary $d/INLA_$VERSION.tgz
 	done
 	for d in $(find $wwwR/$prefix/bin/windows -name updateBinaryPackages|xargs dirname); do
 	    cp -v $zipINLA $d/INLA_$VERSION.zip
@@ -159,6 +170,7 @@ if [ $# -ge 1 -a "$1" == "2" ]; then
 	cp -v $SRC $wwwR/$prefix/src/contrib/INLA_$VERSION.tar.gz
 	for d in $(find $wwwR/$prefix/bin/macosx -name updateBinaryPackages|xargs dirname); do
 	    cp -v $tgzINLA $d/INLA_$VERSION.tgz
+	    convert_to_mac_binary $d/INLA_$VERSION.tgz
 	done
 	for d in $(find $wwwR/$prefix/bin/windows -name updateBinaryPackages|xargs dirname); do
 	    cp -v $zipINLA $d/INLA_$VERSION.zip
