--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -122,7 +122,7 @@ convert_to_mac_binary () {
     for f in "$@"; do
 	ff=$(basename $f)
 	scp $f $host:$ff
-	ssh $host R CMD INSTALL --build $ff
+	ssh $host R CMD INSTALL --build --library=./tmp $ff
 	scp $host:$ff $f
     done
 }
