--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -118,7 +118,7 @@ OldDir=$(echo ~hrue/www/www.inla/binaries/testing/Old)
 old="$tgzINLA-$bdate"
 
 convert_to_mac_binary () {
-    host=hruemac.math.ntnu.no
+    host=darwin.math.ntnu.no
     for f in "$@"; do
 	ff=$(basename $f)
 	scp $f $host:$ff
