Added option 'correct' to the f()-terms; experimental...

--- a/r-inla.org/doc/hyper/latent/ar.tex
+++ b/r-inla.org/doc/hyper/latent/ar.tex
@@ -9,8 +9,8 @@
 	 	 	\item[short.name] prec
 	 	 	\item[initial] 4
 	 	 	\item[fixed] FALSE
-	 	 	\item[prior] loggamma
-	 	 	\item[param] 1 5e-05
+	 	 	\item[prior] pc.prec
+	 	 	\item[param] 1 0.01
 	 	 	\item[to.theta] \verb!function(x) log(x)!
 	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
@@ -18,10 +18,10 @@
 	 	 \begin{description}
 	 	 	\item[name] pacf1
 	 	 	\item[short.name] pacf1
-	 	 	\item[initial] 2
+	 	 	\item[initial] 1
 	 	 	\item[fixed] FALSE
-	 	 	\item[prior] mvnorm
-	 	 	\item[param] 0 0.15
+	 	 	\item[prior] pc.ar
+	 	 	\item[param] 1
 	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
 	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
