Changed the parameterisation of likelihood sn2.

--- a/r-inla.org/doc/likelihood/sn.tex
+++ b/r-inla.org/doc/likelihood/sn.tex
@@ -81,17 +81,18 @@ code for further details.
 \subsection*{Parametrisation (version 2)}
 
 In the family ``sn2'' we offer an alternative parametersisation of the
-skew-normal with moment parameterr mean $\mu$, precision $w\tau$
+skew-normal with moment parameters, precision $w\tau$
 (where $w$ is a fixed weight or scale) and standarized skewness
 $\gamma$ (where $|\gamma|<1$
 due to the skew-normal family\footnote{%
     or to be presice,
     $|\gamma| < \frac{4-\pi}{2\left(\pi/2-1\right)^{3/2}} =
-    0.995271746\ldots$}). In this parameterisation, the mean
+    0.995271746\ldots$}). In this parameterisation, the location
 parameter is linked to the linear predictor by
 \begin{displaymath}
     \mu = \eta
 \end{displaymath}
+and $\mu$ equals $\xi$ in the parameterisation below.
 
 \subsection*{Hyperparameters}
 The precision $\tau$ is represented as
